--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,10 +2,11 @@
 
 <html>
     <head>
-        <title>Salud MinTIC</title>
+        <title>Agile</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="ccs/estilos.css">
+		<link rel="icon" href="img/logo.png" type="image/x-icon">
     </head>
     <body> <!--.boxesContainer-->
 
