--- a/public_html/proyectos.html
+++ b/public_html/proyectos.html
@@ -14,12 +14,12 @@ and open the template in the editor.
 		<!-- Vella CSS Styles  -->
 		<link rel="stylesheet" type="text/css" href="ccs/newcss/style.css" media="screen">
 		<!-- Css3 Transitions Styles  -->
-		<link rel="stylesheet" type="text/css" href="css/newcss/animate.css" media="screen">
+		<link rel="stylesheet" type="text/css" href="ccs/newcss/animate.css" media="screen">
 		<!-- Color CSS Styles  -->
-		<link rel="stylesheet" type="text/css" href="css/newcss/colors/blue.css" title="blue" media="screen">
+		<link rel="stylesheet" type="text/css" href="ccs/newcss/blue.css" title="blue" media="screen">
 		<!-- Custom CSS Styles  -->
-		<link rel="stylesheet" type="text/css" href="css/newcss/custom.css" media="screen">	
-		<style></style></head>
+		<link rel="stylesheet" type="text/css" href="ccs/newcss/custom.css" media="screen">	
+		<style></style>
 
     </head>
     <!--Set html structure to the form jheb-->
@@ -201,11 +201,11 @@ and open the template in the editor.
 				<br>
                 <div class="item">
                     <div class="big-title text-center animated fadeInDown delay-01" data-animation="fadeInDown" data-animation-delay="01">
-                        <h3 class="textoblanco uppercase">Servicios profesionales de desarrollo de software a medida</h3>
+                        <h3 class="accent-color uppercase">Servicios profesionales de desarrollo de software a medida</h3>
                          <br>
-                        <p class="textoblanco">Descubre todo lo que podemos hacer parar mejorar optimizar los costes y mejorar los procesos de tu empresa.</p><br>
+                        <p>Descubre todo lo que podemos hacer parar mejorar optimizar los costes y mejorar los procesos de tu empresa.</p><br>
                         
-                         <a href="https://ydray.com/get/l/lt16334777601912/D6GnbKL5UXM" title="Pulsa pra descargar nuestra presentación sobre nuestros servicios de software a medida" target="_blank" class="btn-system btn-large btn-wite"><i class="icon-doc-4"></i> DESCARGA NUESTRA PRESENTACIÓN</a>   
+                         <a href="https://ydray.com/get/l/lt16334777601912/D6GnbKL5UXM" title="Pulsa pra descargar nuestra presentación sobre nuestros servicios de software a medida" target="_blank" class="btn-system btn-large btn-wite"><i class="icon-doc-4"></i><span class="textoblanco"> DESCARGA NUESTRA PRESENTACIÓN</span></a>   
                             
                     </div>
                 </div>
