--- a/public_html/quienesSomos.html
+++ b/public_html/quienesSomos.html
@@ -4,11 +4,10 @@
     <title>¿Quiénes Somos?</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="img/logo.png" type="image/x-icon">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="ccs/aboutus/bootstrap.css">
     <link rel="stylesheet" href="ccs/aboutus/fonts.css">
     <link rel="stylesheet" href="ccs/aboutus/style.css">
@@ -113,7 +112,7 @@
 				Es un sueño dedicarnos a lo que nos gusta, y poder elegir los proyectos en los que participamos es un privilegio. 
 				Por eso no disponemos de planes de precios para nuestros desarrollos, ni paquetes básicos, premium o profesionales. 
 				Tratamos cada proyecto de forma independiente, y nos adaptamos a tu presupuesto, sin letras pequeñas ni costes añadidos.
-
+				<br>
 				Tú pones la idea y nosotros la hacemos realidad.</p>
             </div>
           </div>
@@ -133,15 +132,16 @@
       <!--Footer-->
       <footer class="section footer-classic section-sm">
         <div class="container wow fadeInUp" data-wow-delay=".4s">
-          <div class="footer-classic-aside">
-            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. Todos los derechos reservados <a href="https://github.com/githubJHEB/PlusUpbSprint">Agile</a></p>
-            <ul class="social-links">
-              <li><a class="fa fa-linkedin" href="#"></a></li>
-              <li><a class="fa fa fa-twitter" href="#"></a></li>
-              <li><a class="fa fa-facebook" href="#"></a></li>
-              <li><a class="fa fa-instagram" href="#"></a></li>
-            </ul>
-          </div>
+			<div class="footer-classic-aside">
+				<p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. Todos los derechos reservados <a href="https://github.com/githubJHEB/PlusUpbSprint">Agile</a></p>			
+				<ul class="social-links">
+					<li><a class="fa fa-linkedin" href="https://www.linkedin.com/"></a></li>
+					<li><a class="fa fa fa-twitter" href="https://twitter.com/home"></a></li>
+					<li><a class="fa fa-facebook" href="https://www.facebook.com/"></a></li>
+					<li><a class="fa fa-instagram" href="https://www.instagram.com/"></a></li>
+				</ul>
+			</div>
+			<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licencia Creative Commons" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />Esta obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Licencia Creative Commons Atribución - CompartirIgual 4.0 Internacional</a>.					  
         </div>
       </footer>
     </div>
