--- a/public_html/index.html
+++ b/public_html/index.html
@@ -29,6 +29,9 @@
                 </li> <li>
                   <a href="contactanos.html">Contáctanos</a>
                 </li>
+                <li>
+                  <a href="registro.html">Regístrese</a>
+                </li>
               </ul>
             </div><!--menu principal-->
           </nav>
