--- a/public_html/contactanos.html
+++ b/public_html/contactanos.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->
-	<link rel="icon" type="image/png" href="contacto/images/icons/favicon.ico"/>
+	<link rel="icon" type="image/png" href="productos/img/icono.ico"/>
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="contacto/vendor/bootstrap/css/bootstrap.min.css">
 <!--===============================================================================================-->
@@ -100,7 +100,18 @@
 </script>
 
 <footer>
-	
+		<a href="https://www.facebook.com">
+		<img id = mediaFacebook src="img/SocialMediaFacebook.png" alt="Facebook Red Social">
+		</a>
+		<a href="https://www.instagram.com">
+		<img id = mediaInstagram src="img/SocialMediaInstagram.png" alt="Instagram Red Social">
+		</a>
+		<a href="https://www.telegram.com">
+		<img id = mediaTelegram src="img/SocialMediaTelegram.png" alt="Telegram Red Social">
+		</a>
+		<a href="https://www.twitter.com">
+		<img id = mediaTwitter src="img/SocialMediaTwitter.png" alt="Twitter Red Social">
+		</a>
 </footer>
 
 </body>
