--- a/public_html/productos.html
+++ b/public_html/productos.html
@@ -1,18 +1,141 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head>
-        <title>Productos</title>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="ccs/estilos.css">
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link rel="icon" href="productos/img/icono.ico">
+<title>Productos</title>
+<!-- Bootstrap core CSS -->
+<link href="productos/css/bootstrap.min.css" rel="stylesheet">
+<!-- Fonts -->
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+<!-- Custom styles for this template -->
+<link href="productos/css/mediumish.css" rel="stylesheet">
+</head>
+<body>
 
-    </head>
-    <!--Set html structure to the form jheb-->
-    <body id="body_productos">
-        TODO Productos
-    </body>
+<!-- Begin Nav
+================================================== -->
+<nav class="navbar navbar-toggleable-md navbar-light bg-white fixed-top mediumnavigation">
+<div class="container">
+	<!-- Begin Logo -->
+	<a class="navbar-brand" href="index.html">
+	<img src="productos/img/logo.png" alt="logo">
+	</a>
+	<!-- End Logo -->
+</div>
+</nav>
+<!-- End Nav
+================================================== -->
+
+<!-- Begin Site Title
+================================================== -->
+<div class="container">
+	<div class="mainheading">
+		<h1 class="sitetitle">Productos</h1>
+	</div>
+<!-- End Site Title
+================================================== -->
+
+	<!-- Begin List Posts
+	================================================== -->
+	<section class="recent-posts">
+	<div class="card-columns listrecent">
+
+		<!-- begin post -->
+		<div class="card">
+			<img class="img-fluid" src="productos/img/facturacion.jpg" alt="">
+			<div class="card-block">
+				<h2 class="card-title">Sistema de facturación</h2>
+				<h4 class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</h4>
+				<div class="metafooter">
+					<div class="wrapfooter">
+						<span class="meta-footer-thumb">
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- end post -->
+
+		<!-- begin post -->
+		<div class="card">
+			<img class="img-fluid" src="productos/img/intranet.jpg" alt="">
+			<div class="card-block">
+				<h2 class="card-title">Intranet para aplicaciones</h2>
+				<h4 class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</h4>
+				<div class="metafooter">
+					<div class="wrapfooter">
+						<span class="meta-footer-thumb">
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- end post -->
+
+		<!-- begin post -->
+		<div class="card">
+			<img class="img-fluid" src="productos/img/vigilancia.jpg" alt="">
+			<div class="card-block">
+				<h2 class="card-title">Sistema de vigilancia integrada</h2>
+				<h4 class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</h4>
+				<div class="metafooter">
+					<div class="wrapfooter">
+						<span class="meta-footer-thumb">
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- end post -->
+
+		<!-- begin post -->
+		<div class="card">
+			<img class="img-fluid" src="productos/img/rastreo.jpg" alt="">
+			<div class="card-block">
+				<h2 class="card-title">Sistema de rastreo</h2>
+				<h4 class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</h4>
+				<div class="metafooter">
+					<div class="wrapfooter">
+						<span class="meta-footer-thumb">
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- end post -->
+
+		<!-- begin post -->
+		<div class="card">
+			<img class="img-fluid" src="productos/img/vpn.png" alt="">
+			<div class="card-block">
+				<h2 class="card-title">Sistema de VPN</h2>
+				<h4 class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</h4>
+				<div class="metafooter">
+					<div class="wrapfooter">
+						<span class="meta-footer-thumb">
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- end post -->
+
+		<!-- begin post -->
+		<div class="card">
+			<img class="img-fluid" src="productos/img/acceso.jpg" alt="">
+			<div class="card-block">
+				<h2 class="card-title">Sistema de acceso inteligente</h2>
+				<h4 class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</h4>
+				<div class="metafooter">
+				</div>
+			</div>
+		</div>
+		<!-- end post -->
+
+<!-- Bootstrap core JavaScript
+    ================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="productos/js/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="productos/js/bootstrap.min.js"></script>
+<script src="productos/js/ie10-viewport-bug-workaround.js"></script>
+</body>
 </html>
