--- a/public_html/registro.html
+++ b/public_html/registro.html
@@ -14,7 +14,7 @@ and open the template in the editor.
     <!--Set html structure to the form jheb-->
     <body id="body_form_registration">
         <div class="titulo">
-          <h1>Bienvenidos a Salud MinTIC</h1>
+          <h1>Bienvenidos a Agile</h1>
         </div>
         <form id="form_registrarse">
             <h1>Formulario de registro</h1>
