Recuperación de index.html

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -33,6 +33,8 @@
                   <a href="registro.html">Regístrese</a>
                 </li>
               </ul>
+              <a class="btn-registro button-style-registro" href="registro.html">Registrarse</a>
+
             </div><!--menu principal-->
           </nav>
         </div><!--titulo-->
@@ -43,7 +45,7 @@
             <div class="cardBox">
               <div class="card">
                 <div class="front">
-                  <img src="img/icono_consultoria.png">
+                  <img src="img/icono_consultoria.jpg">
                   <h3>Consultoria</h3>
                 </div>
                 <div class="back">
@@ -57,7 +59,7 @@
             <div class="cardBox">
               <div class="card">
                 <div class="front">
-                  <img src="img/icono_desarrollo_medida.png">
+                  <img src="img/icono_desarrollo_medida.jpg">
                   <h3>Desarrollo a la medida</h3>
                 </div>
                 <div class="back">
@@ -71,7 +73,7 @@
             <div class="cardBox">
               <div class="card">
                 <div class="front">
-                  <img src="img/icono_infraestrctura.png">
+                  <img src="img/icono_infraestrctura.jpg">
                   <h3>Infraestructura</h3>
                 </div>
                 <div class="back">
@@ -85,7 +87,7 @@
             <div class="cardBox">
               <div class="card">
                 <div class="front">
-                  <img src="img/icono_pagina_web.png">
+                  <img src="img/icono_pagina_web.jpg">
                   <h3>Desarrollo de Páginas y Apps Web</h3>
                 </div>
                 <div class="back">
