--- a/public_html/index.html
+++ b/public_html/index.html
@@ -84,7 +84,7 @@
             <div class="cardBox">
               <div class="card">
                 <div class="front">
-                  <img src="img/icono_pagina_web.jpg">
+                  <img src="img/icono_pagina_web.png">
                   <h3>Desarrollo de Páginas y Apps Web</h3>
                 </div>
                 <div class="back">
