Refactor color index

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -42,7 +42,7 @@
             <div class="cardBox">
               <div class="card">
                 <div class="front">
-                  <img src="img/icono_consultoria.jpg">
+                  <img src="img/icono_consultoria.png">
                   <h3>Consultoria</h3>
                 </div>
                 <div class="back">
@@ -56,7 +56,7 @@
             <div class="cardBox">
               <div class="card">
                 <div class="front">
-                  <img src="img/icono_desarrollo_medida.jpg">
+                  <img src="img/icono_desarrollo_medida.png">
                   <h3>Desarrollo a la medida</h3>
                 </div>
                 <div class="back">
@@ -70,7 +70,7 @@
             <div class="cardBox">
               <div class="card">
                 <div class="front">
-                  <img src="img/icono_infraestrctura.jpg">
+                  <img src="img/icono_infraestrctura.png">
                   <h3>Infraestructura</h3>
                 </div>
                 <div class="back">
