--- a/public_html/registro.html
+++ b/public_html/registro.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="ccs/login.css">
     <link rel="stylesheet" href="ccs/estilos.css">
 </head>
-<body>
+<body background="img/fondo2.jpg">
+
     <div class="titulo">     <!-- @ menu principal -->
         <nav>
           <div class="menu principal">
