Adiccion menú contactos
Se añade el menu principal a la página de contactanos

--- a/public_html/contactanos.html
+++ b/public_html/contactanos.html
@@ -25,9 +25,28 @@
 	<link rel="stylesheet" type="text/css" href="contacto/css/main.css">
 <!--===============================================================================================-->
 </head>
-<body>
-	<header style = "text-align: center; background-color: #f2f2f2;">
-		<img src="img/logo.png" alt="Icono empresa"  style= "max-width:10%; max-height:10%;" >
+<body style="background-color: #f2f2f2;">
+	<header style = "text-align: center; background-color: #f2f2f2; margin-top: 2%;">
+		<ul class="menu"></ul>
+			<li>
+				<a href="index.html">
+					<img src="img/logo.png" alt="Icono empresa"  style= "width:10%; max-width: 70px;" >
+				</a>
+			</li>
+			<li>
+				<a href="quienesSomos.html" style="font-size: 1em;">QUIENES SOMOS</a>
+			</li>
+			<li>
+				<a href="proyectos.html" style="font-size: 1em;">PROYECTOS</a>
+			</li>
+			<li>
+				<a href="productos.html" style="font-size: 1em;">PRODUCTOS</a>
+			</li>
+			<li>
+				<a href="contactanos.html" style="font-size: 1em;">CONTÁCTANOS</a>
+			</li>
+		</ul>
+		
 	</header>
 	<div class="container-contact100">
 		<div class="wrap-contact100">
@@ -100,19 +119,18 @@
 </script>
 
 <footer>
-		<a href="https://www.facebook.com">
+	<a href="https://www.facebook.com">
 		<img id = mediaFacebook src="img/SocialMediaFacebook.png" alt="Facebook Red Social">
-		</a>
-		<a href="https://www.instagram.com">
+	</a>
+	<a href="https://www.instagram.com">
 		<img id = mediaInstagram src="img/SocialMediaInstagram.png" alt="Instagram Red Social">
-		</a>
-		<a href="https://www.telegram.com">
+	</a>
+	<a href="https://www.telegram.org">
 		<img id = mediaTelegram src="img/SocialMediaTelegram.png" alt="Telegram Red Social">
-		</a>
-		<a href="https://www.twitter.com">
+	</a>
+	<a href="https://www.twitter.com">
 		<img id = mediaTwitter src="img/SocialMediaTwitter.png" alt="Twitter Red Social">
-		</a>
+	</a>
 </footer>
-
 </body>
 </html>
