--- a/public_html/contactanos.html
+++ b/public_html/contactanos.html
@@ -29,21 +29,21 @@
 	<header style = "text-align: center; background-color: #f2f2f2; margin-top: 2%;">
 		<ul class="menu"></ul>
 			<li>
-				<a href="index.html">
+				<a id="logoAgile"href="index.html">
 					<img src="img/logo.png" alt="Icono empresa"  style= "width:10%; max-width: 70px;" >
 				</a>
 			</li>
 			<li>
-				<a href="quienesSomos.html" style="font-size: 1em;">QUIENES SOMOS</a>
+				<a href="quienesSomos.html" style="font-size: 1.1em;">QUIENES SOMOS</a>
 			</li>
 			<li>
-				<a href="proyectos.html" style="font-size: 1em;">PROYECTOS</a>
+				<a href="proyectos.html" style="font-size: 1.1em;">PROYECTOS</a>
 			</li>
 			<li>
-				<a href="productos.html" style="font-size: 1em;">PRODUCTOS</a>
+				<a href="productos.html" style="font-size: 1.1em;">PRODUCTOS</a>
 			</li>
 			<li>
-				<a href="contactanos.html" style="font-size: 1em;">CONTÁCTANOS</a>
+				<a href="contactanos.html" style="font-size: 1.1em;">CONTÁCTANOS</a>
 			</li>
 		</ul>
 		
