--- a/public_html/productos.html
+++ b/public_html/productos.html
@@ -17,14 +17,27 @@
 
 <!-- Begin Nav
 ================================================== -->
-<nav class="navbar navbar-toggleable-md navbar-light bg-white fixed-top mediumnavigation">
-<div class="container">
-	<!-- Begin Logo -->
-	<a class="navbar-brand" href="index.html">
-	<img src="productos/img/logo.png" alt="logo">
-	</a>
-	<!-- End Logo -->
-</div>
+<nav class="mainMenu">
+		<ul>
+		<li>
+			<a id="logoAgile"href="index.html">
+				<img src="img/logo.png" alt="Icono empresa"  style= "width:10%; max-width: 70px;" >
+			</a>
+		</li>
+		<li>
+			<a href="quienesSomos.html">QUIENES SOMOS</a>
+		</li>
+		<li>
+			<a href="proyectos.html">PROYECTOS</a>
+		</li>
+		<li>
+			<a href="productos.html">PRODUCTOS</a>
+		</li>
+		<li>
+			<a href="contactanos.html">CONTÁCTANOS</a>
+		</li>
+		</ul>
+
 </nav>
 <!-- End Nav
 ================================================== -->
