Refactor Registo y cosnultoria

--- a/public_html/consultoria.html
+++ b/public_html/consultoria.html
@@ -15,8 +15,31 @@ and open the template in the editor.
     <body>
       <div class="contenedor_padre">
 
+        <div>
+          <ul class="menu">
+      			<li>
+      				<a id="logoAgile"href="index.html">
+      					<img src="img/logo.png" alt="Icono empresa"  style= "width:10%; max-width: 70px;" >
+      				</a>
+      			</li>
+      			<li>
+      				<a href="quienesSomos.html" style="font-size: 1.1em;">QUIENES SOMOS</a>
+      			</li>
+      			<li>
+      				<a href="proyectos.html" style="font-size: 1.1em;">PROYECTOS</a>
+      			</li>
+      			<li>
+      				<a href="productos.html" style="font-size: 1.1em;">PRODUCTOS</a>
+      			</li>
+      			<li>
+      				<a href="contactanos.html" style="font-size: 1.1em;">CONTÁCTANOS</a>
+      			</li>
+      		</ul>
+
+      	</div>
+
           <div class="titulo-servicio">
-              <p id="menu">Consultoría</p>
+              <p>Consultoría</p>
             </div>
 
         <div class="slogan-1">
