--- a/public_html/index.html
+++ b/public_html/index.html
@@ -30,7 +30,7 @@
                   <a href="contactanos.html">Contáctanos</a>
                 </li>
               </ul>
-              <a class="btn-registro button-style-registro" href="registro.html">Registrarse</a>
+              <a class="btn-registro button-style-registro" href="registro.html">Registro</a>
 
             </div><!--menu principal-->
           </nav>
